[project]
name = "homework-module-two"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[tool.flake8]
max-line-length = 119
exclude =".git, __pycache__"
ignore = "E203, W503"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.black]
line-length = 119
exclude =".git"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
namespace_packages = true
explicit_package_bases = true


